Fixed spacing issues on prints page

--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -109,7 +109,7 @@ li {
   line-height: 1.2;
   font-size: 1rem;
   color: black;
-  font-weight: 50;
+  font-weight: lighter;
   padding-top: 2px;
   padding-bottom: 2px;
   color: black;
@@ -357,6 +357,8 @@ nav li {
                             auto
                             auto
                             auto
+                            auto
+                            auto
                             auto;
         grid-template-areas: "header header header"
                              "landing landing landing"
@@ -382,6 +384,16 @@ nav li {
       margin-left: 30px;
     }
 
+    .profileimage {
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-bottom: 10px;
+    }
+
+    .socialmedia {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
 
 }
 
@@ -463,63 +475,65 @@ nav li {
 /* Trips Style */
 /***************/
 
-.gallery {
-background-color: #D1D2D5;
-grid-area: gallery;
-display: flex;
-flex-direction: column;
-align-items: center;
-width: 100%;
-height: auto;
-border-top: 10px solid black;
+#trips {
+  grid-area: gallery;
+  background-color: #D1D2D5;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  border-top: 10px solid black;
 }
 
-.gallery h1 {
-padding-top: 30px;
-padding-bottom: 20px;
-text-align: center;
-}
-
-.gallery_flex {
-display: flex;
-flex-direction: row;
-justify-content: center;
-flex-wrap: wrap;
-width: 90%;
-height: auto;
-padding-bottom: 32px;
-
-}
-
-.tripspost {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap;
-width: 400px;
-height: 400px;
-margin: 10px;
-padding: 10px;
-background-color: #FFFFFF;
-border-radius: 10px;
-}
-
-.tripspost a {
-  text-align: center;
+.gallery a {
   font-size: 1.5rem;
 }
 
-.tripspost img {
-  width: 380px;
-  height: 250px;
+.gallery h1 {
+  padding-top: 20px;
+  text-align: center;
   padding-bottom: 10px;
+}
+
+.gallery h3 {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.gallery_flex {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  padding-bottom: 32px;
+  margin-top: 10px;
+}
+
+.tripspost {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 400px;
+  height: 400px;
+  margin: 10px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+}
+
+.tripspost img {
+  width: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .tripspost p {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 15px;
 }
 
 /* Blog Layout Styles */
@@ -633,19 +647,6 @@ border-radius: 10px;
         background-color: #FFFFFF;
         max-width: auto;
         min-width: 250px;
-    }
-
-    .blog_intro {
-      text-align: justify;
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-bottom: 10px;
-    }
-
-    .blog_tips {
-      text-align: justify;
-      padding-left: 20px;
-      padding-right: 20px;
     }
 
 }
@@ -868,31 +869,6 @@ border-radius: 10px;
   padding-right: 10px;
   padding-bottom: 15px;
 }
-
-/* .printsinfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.printsinfo h3 {
-  font-weight: 700;
-  text-align: center;
-  padding-bottom: 10px;
-  text-decoration: underline;
-}
-
-.printsinfo img {
-  width: auto;
-  height: 250px;
-  padding: 2px;
-}
-
-.printsinfo p {
-padding: 10px 50px;
-} */
 
 
 /*Lightbox Gallery Style*/
